Adicionando funcionalidade de Ativar e desativar perfil

--- a/new/ProjetoFinal/usuarios/templates/login.html
+++ b/new/ProjetoFinal/usuarios/templates/login.html
@@ -25,7 +25,7 @@
 
 		<a href="{% url 'registrar' %}">Registre-se</a>
 		<a class="pull-right" href="{% url 'password_reset' %}">Esqueci a senha</a>
-		<a class="pull-right" href="{% url 'ativar' %}">Re-ativar conta</a>
+		<a class="pull-right" href="{% url 'ativar_conta' %}">Re-ativar conta</a>
 	</form>
 
 {% endblock %}
