--- a/new/ProjetoFinal/perfis/templates/desativar_conta.html
+++ b/new/ProjetoFinal/perfis/templates/desativar_conta.html
@@ -6,10 +6,14 @@
         <form class="form-signin" method="post" action="{% url 'desativar' %}">
             <div>
             {% csrf_token %}
+            <h3>Porque você deseja desativar a sua conta?</h3>
             <input name="justificativa" id="nome_id" required placeholder=" Nos diga o porque" style="min-height: 90px; min-width: 300px;">
-            <button class="btn btn-danger pull-right btn-confirm" >Desativar</button>
-            </div>
-            <div
+            <button type="submit" class="btn btn-danger pull-right btn-confirm">Desativar</div>
+            
+           </div>
+        </form>
+    </div>
+ <div
                 class="modal fade"
                 tabindex="-1"
                 role="dialog"
@@ -33,7 +37,7 @@
                                 class="modal-title"
                                 id="myModalLabel"
                             >
-                                Porque você deseja desativar a sua conta?
+                                Deseja realmente desativar o seu perfil?
                             </h4>
                         </div>
 
@@ -44,19 +48,15 @@
                                     href="{% url 'desativar_conta' %}"
                                 >Cancelar</a>
 
-                                <a
+                                <button
                                     class="btn btn-default"
-                                    href="{% url 'desativar' %}"
-                                >Excluir</a>
+                                    type="submit"
+                                >Desativar</button>
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
-        </form>
-    
-</div>
-
 
 
 <script type="text/javascript">
